--- a/css/style.css
+++ b/css/style.css
@@ -180,131 +180,10 @@ section{
     text-align: justify;
 }
 
-/* Login */
-.logo{
-    font-family: "EthnoCentric";
-    font-size: 1.75em;
-    color: black;
-}
+/* Galeria */
 
-#user-error, #pass-error {
-    display: block !important;
-    color: #da4644;
-    font-size: 11px;
-}
-
-.main-login .login_section form h1, .main-register .signup_section form h1 {
-    font-weight: bold;
-    font-size: 22px;
-    margin-bottom: 40px;
-}
-
-@media only screen and (max-width: 575px) {
-    .main-login .login_section form h1, .main-register .signup_section form h1 {
-        font-size: 28px;
-        margin-top: 0px;
-    }
-}
-
-.main-login .login_section form input[type="submit"], .main-login .btn_secundary, 
-.main-register .login_section form input[type="submit"], .main-register .btn_secundary{
-    -moz-border-radius: 20px;
-    -webkit-border-radius: 20px;
-    border-radius: 20px;
-    margin-top: 15px;
-    font-size: 12px;
-}
-
-@media only screen and (min-width: 720px) and (max-width: 991px) {
-    .main-login .login_section form input[type="submit"], .main-login .btn_secundary, 
-    .main-register .login_section form input[type="submit"], .main-register .btn_secundary{
-        font-size: 10px;
-    }
-}
-
-.main-login .login_section form input[type="submit"],
-.main-register .login_section form input[type="submit"] {
-    background-color: #2cabee;
-    border: 1px solid #2cabee;
-    padding: 7px 40px;
-  }
-@media only screen and (min-width: 720px) and (max-width: 991px) {
-    .main-login .login_section form input[type="submit"],
-    .main-register .login_section form input[type="submit"] {
-        padding: 6px 20px;
-    }
-}
-@media only screen and (min-width: 576px) and (max-width: 719px) {
-    .main-login .login_section form input[type="submit"],
-    .main-register .login_section form input[type="submit"] {
-        padding: 5px 15px;
-    }
-}
-@media only screen and (max-width: 575px) {
-    .main-login .login_section form input[type="submit"],
-    .main-register .login_section form input[type="submit"] {
-        padding: 10px 40px;
-    }
-}
-
-.main-login .btn_secundary,
-.main-register .btn_secundary{
-    border: 2px solid #2cabee;
-    color: #2cabee;
-    margin-left: 4px;
-    padding: 7px 43px;
-}
-@media only screen and (min-width: 720px) and (max-width: 991px) {
-    .main-login .btn_secundary,
-    .main-register .btn_secundary{
-        padding: 5px 15px;
-    }
-}
-@media only screen and (min-width: 576px) and (max-width: 719px) {
-    .main-login .btn_secundary,
-    .main-register .btn_secundary{
-        padding: 6px 20px;
-    }
-}
-@media only screen and (max-width: 575px) {
-    .main-login .btn_secundary,
-    .main-register .btn_secundary{
-        padding: 10px 40px;
-    }
-}
-
-.main-login .btn_secundary:hover,
-.main-register .btn_secundary:hover{
-    background-color: #2cabee;
-    color: #ffffff;
-}
-/******************************************************************************/
-.container .login_section form .form-row .form-control, .container .signup_section form .form-row .form-control {
-width: 280px;
-font-size: 0.85rem;
-padding: 8px 20px;
-margin-top: 10px;
-}
-@media only screen and (max-width: 575px) {
-/* line 98, ../sass/stylesheet.scss */
-.container .login_section form .form-row .form-control, .container .signup_section form .form-row .form-control {
-width: 385px;
-font-size: 1.1rem;
-margin-top: 10px;
-padding: 12px 30px;
-}
-}
-
-/* line 110, ../sass/stylesheet.scss */
-.container .login_section form .form-check, .container .signup_section form .form-check {
-margin-top: 5px;
-line-height: 1.5;
-}
-@media only screen and (max-width: 575px) {
-/* line 110, ../sass/stylesheet.scss */
-.container .login_section form .form-check, .container .signup_section form .form-check {
-margin-top: 10px;
-}
+.gallery-intro{
+    width: 100%;
 }
 
 /* Footer */
